更换scala打包方式